--- a/packageManifest.json
+++ b/packageManifest.json
@@ -1,9 +1,9 @@
 {
   "packageName": "Mitsubishi Heat Pump Remote Sensor",
   "author": "Randall Norviel",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "minimumHEVersion": "2.4.0",
-  "dateReleased": "2025-01-11",
+  "dateReleased": "2025-01-12",
   "apps": [
     {
       "id": "be78aed3-8295-4676-846f-8ecc02d5b9a5",
@@ -34,5 +34,5 @@
       "version": "1.1.4"
     }
   ],
-  "releaseNotes": "Fix avoidImmediateCycle"
+  "releaseNotes": "Logging and Documentation"
 }
