--- a/packageManifest.json
+++ b/packageManifest.json
@@ -1,9 +1,9 @@
 {
   "packageName": "Mitsubishi Heat Pump Remote Sensor",
   "author": "Randall Norviel",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "minimumHEVersion": "2.4.0",
-  "dateReleased": "2025-01-26",
+  "dateReleased": "2025-02-02",
   "apps": [
     {
       "id": "be78aed3-8295-4676-846f-8ecc02d5b9a5",
@@ -24,15 +24,6 @@
       "primary": false
     }
   ],
-  "drivers": [
-    {
-      "id": "41e7ff72-d251-4584-9bd1-c64c1a18120c",
-      "name": "Mitsubishi Heat Pump MQTT",
-      "namespace": "cogdev",
-      "location": "https://raw.githubusercontent.com/randalln/hubitat-mitsubishi-mqtt/master/hubitat-mitsubishi-mqtt.groovy",
-      "required": false,
-      "version": "1.1.5"
-    }
-  ],
-  "releaseNotes": "Set temperature at idle"
+  "drivers": [],
+  "releaseNotes": "[v0.2.9] Implement gradle"
 }
