--- a/packageManifest.json
+++ b/packageManifest.json
@@ -1,9 +1,9 @@
 {
   "packageName": "Mitsubishi Heat Pump Remote Sensor",
   "author": "Randall Norviel",
-  "version": "0.2.11",
+  "version": "0.2.12",
   "minimumHEVersion": "2.4.0",
-  "dateReleased": "2025-02-05",
+  "dateReleased": "2025-02-10",
   "apps": [
     {
       "id": "be78aed3-8295-4676-846f-8ecc02d5b9a5",
@@ -25,5 +25,5 @@
     }
   ],
   "drivers": [],
-  "releaseNotes": "[v0.2.11] Remove avoidImmediateCycle, having moved it into the driver"
+  "releaseNotes": "[v0.2.12] Fix input type for timeout"
 }
