--- a/packageManifest.json
+++ b/packageManifest.json
@@ -1,9 +1,9 @@
 {
   "packageName": "Mitsubishi Heat Pump Remote Sensor",
   "author": "Randall Norviel",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "minimumHEVersion": "2.4.0",
-  "dateReleased": "2025-02-11",
+  "dateReleased": "2025-03-10",
   "apps": [
     {
       "id": "be78aed3-8295-4676-846f-8ecc02d5b9a5",
@@ -25,5 +25,5 @@
     }
   ],
   "drivers": [],
-  "releaseNotes": "[v0.8.0] Let the app use a hub variable for offDelta"
+  "releaseNotes": "[v0.8.1] Fix canTurnOff bug"
 }
